2002-06-22  Ion Badulescu  <ionut@edgar.badula.org>

	* conf/autofs/autofs_solaris_v1.h: add FS_MBACKGROUND to
	AUTOFS_LINK_FS_FLAGS

	* conf/autofs/autofs_solaris_v1.c: convert link mounts to lofs
	mounts in autofs_link_mount/umount

2002-06-22  Ion Badulescu  <lionut@gonzales.badula.org>

	* configure.in: check for devid inside struct umntrequest

	* conf/autofs/autofs_solaris_v2_v3.c (xdr_umntrequest): handle the
	new umntrequest structure in v4.
	(autofs_unmount_2_req): ditto

	* README.autofs: updated for Solaris 2.5/2.5.1

2002-06-22  Erez Zadok  <ezk@whitestar.dyn.optonline.net>

	* configure.in: only define LDAP/Hesiod if both the headers and
	the libraries exist, and the user didn't explicitly disable those
	maps.

2002-06-22 Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* doc/am-utils.texi: fix typos.  Can't use ":" in @cindex entries.

2002-06-22  Erez Zadok  <ezk@whitestar.dyn.optonline.net>

	* doc/am-utils.texi, scripts/amd.conf.5, scripts/amd.conf-sample,
	amd/amd.8: document amd -A option. 

	* amd/get_args.c (get_args): support "amd -A arg" option to
	override the system's detected architecture.  Patch from George
	Ross <gdmr@dcs.ed.ac.uk>.

	* amd/info_ldap.c (amu_ldap_rebind): don't use ldap_enable_cache()
	if the system doesn't have it.

	* configure.in: detect existence of ldap_enable_cache function,
	because it doesn't exist on Solaris 9's latest ldap libraries. 

	* amd/info_ldap.c: LDAP patches from George Ross
	<gdmr@dcs.ed.ac.uk>.  Rework of old code, support for wildcards in
	LDAP queries, and an FD leak fix.

2002-06-22  Ion Badulescu  <lionut@gonzales.badula.org>

	* buildall: use ksh for configure on aix5.1; pass the extra
	arguments after "--" to configure, not to make

	* Makefile.am: added nfs_prot_aix4_3.h to EXTRA_DIST_CONF

	* conf/mount/mount_aix.c (mount_aix3): if the NFSv3 mount fails
	with EINVAL and we have MOUNT_TYPE_NFS3_BIS defined, retry the
	mount with the alternative nfs3_args structure
